--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
 FROM openjdk:8
 MAINTAINER Tim Wu
-COPY spring-boot-eureka-server-0.0.1-SNAPSHOT.jar .
-CMD ["java", "-jar", "spring-boot-eureka-server-0.0.1-SNAPSHOT.jar"]
+#COPY spring-boot-eureka-server-0.0.1-SNAPSHOT.jar .
+#CMD ["java", "-jar", "spring-boot-eureka-server-0.0.1-SNAPSHOT.jar"]
